<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroSensorActivity">

    <EditText
        android:id="@+id/editTextNuevoId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/edit_text_nuevo_id_hint"
        android:inputType="number" />

    <EditText
        android:id="@+id/editTextNuevoNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/edit_text_nuevo_nombre_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextNuevoDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/edit_text_nuevo_descripcion_hint"
        android:inputType="phone" />

    <EditText
        android:id="@+id/editTextNuevoIdeal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/edit_text_nuevo_ideal_hint"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/editTextNuevoTipoSensorId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/edit_text_nuevo_tipo_sensor_hint"
        android:inputType="textPersonName" />

<!--
    <Spinner
        android:id="@+id/spinnerNuevoCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:entries="@array/spinner_categoria_array"
        android:padding="8dp" />
  -->
    <Button
        android:id="@+id/buttonGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:onClick="guardarSensor"
        android:text="@string/button_guardar_sensor_text" />

</androidx.constraintlayout.widget.ConstraintLayout>